--- a/bitcoin/4.bitcoinrb.md
+++ b/bitcoin/4.bitcoinrb.md
@@ -1,17 +1,21 @@
-# bitcoinrb
+# 4. bitcoinrb
 
-2022/02/21
+2022/05/09更新 Shigeichiro Yamasaki
 
-bitcoin core API をRuby から操作する rubygemsの基本
+bitcoin core API をRuby から操作する rubygems  ライブラリの基本操作
 
-## bitcoinrb WiKi
+bitcoinを利用するアプリを作成するためには、bitcoinrbなどのライブラリの利用が必要です。
+
+## 技術情報
+
+* bitcoinrb WiKi
 
 開発者の安土さんによる Wikiです。
 基本的な使用法は、ここでわかります。
 
 [https://github.com/chaintope/bitcoinrb/wiki](https://github.com/chaintope/bitcoinrb/wiki)
 
-## bitcoinrb のクラスとメソッドの一覧
+* bitcoinrb のクラスとメソッドの一覧
 
 [https://www.rubydoc.info/gems/bitcoinrb/0.1.5](https://www.rubydoc.info/gems/bitcoinrb/0.1.5)
 
@@ -38,15 +42,20 @@ brew install --build-from-source leveldb
 gem install bitcoinrb
 ```
 
-## bitcoin core を起動しておく
+## 事前準備
 
-bitcoin core をAPI を介して利用する。
+### bitcoin core を起動しておく
 
-bitcoind でも. bitcoin-qt でもsnap のbitocoin-core でもよい
-
-接続するネットワークを意識してポート番号などを設定する（以下ではsignetを想定）
+* bitcoinrb には、bitcoin coreの機能も実装されていますが、ビットコインネットワークの利用などの多くの機能は、bitcoin core のRPC API を介して利用します。
+* 使用する bitcoin coreのノードは、bitcoind でも. bitcoin-qt でもsnap のbitocoin-core でもよい
+* 接続するビットコインネットワークによって、RPCで接続するポート番号が異なります。
+* 以下ではsignetを想定します。
+* signet でのRPCポートのデフォルトは、38332 です
+* mainnet でのRPCポートのデフォルトは、8332 です
 
 ### irbで確認
+
+ターミナルから Rubyインタプリタを起動
 
 ```bash
 irb
@@ -78,8 +87,6 @@ def bitcoinRPC(method, params)
     JSON.parse(http.request(request).body)["result"]
 end
 ```
-
-
 
 ## トランザクション構成の基本
 
@@ -353,10 +360,6 @@ P2WSH
 ```ruby
 script = Bitcoin::Script.to_p2wsh(<redeem script>)
 ```
-
-
-
-
 
 ## Bitcoinの送金プログラムの例
 
