--- a/bitcoin/5.bitcoin-SegWit.md
+++ b/bitcoin/5.bitcoin-SegWit.md
@@ -1,5 +1,9 @@
-# SegWit (Segregated Witness)
-2021/11/19
+# 5. SegWit (Segregated Witness)
+
+SegWitトランザクションの内容の復習です。
+bitcoinrb での操作を確認しておきましょう。
+
+2022/05/09更新 Shigeichiro Yamasaki
 
 
 ## トランザクションの構造と署名対象
