--- a/bitcoin/6.bitcoinrb-P2WSH.md
+++ b/bitcoin/6.bitcoinrb-P2WSH.md
@@ -1,24 +1,13 @@
-# bitcoinrbでP2WSHを実装
+# 6. bitcoinrbでP2WSHを実装
 
-2022/02/25 Shigeichiro Yamasaki
+2022/05/09更新 Shigeichiro Yamasaki
 
 bitcoinでスマートコントラクトを記述するときの基本は P2WSH です
 
-P2WSHの代表例はマルチシグですが、それ以外のケースも重要です。
-
-## bitcoinrb WiKi
-
-開発者の安土さんによる Wikiです。
-基本的な使用法は、ここでわかります。
-
-[https://github.com/chaintope/bitcoinrb/wiki](https://github.com/chaintope/bitcoinrb/wiki)
-
-## bitcoinrb のクラスとメソッドの一覧
-
-[https://www.rubydoc.info/gems/bitcoinrb/0.1.5](https://www.rubydoc.info/gems/bitcoinrb/0.1.5)
+P2WSHの代表例はマルチシグなので、ここではその説明をしますが、それ以外のケースも重要です。
 
 
-## P2WSHマルチシグ送金プログラム
+## P2WSHマルチシグの例
 
 ```ruby
 require 'bitcoin'
