--- a/bitcoin/2.bitcoin-core-details.md
+++ b/bitcoin/2.bitcoin-core-details.md
@@ -2,7 +2,7 @@
 
 2022/05/09更新 Shigeichiro Yamasaki
 
-## ビットコイン 発コミュニティとBIP
+## ビットコイン開発コミュニティとBIP
 
 * [メーリングリスト bitcoin-devZ](https://lists.linuxfoundation.org/mailman/listinfo/bitcoin-dev)
 * [Slack: https://bitcoincore.slack.com/](Slack: https://bitcoincore.slack.com/)
