--- a/bitcoin/3.bitcoinrb.md
+++ b/bitcoin/3.bitcoinrb.md
@@ -32,7 +32,7 @@ Ruby 2.7.6 を基本とします。
 ### ubuntuでのbitcoinrbのインストール
 
 ★2022年５月現在、M1 MacのRubyでは不具合が発生するようです。
-IntelMacかubuntuでの利用をおすすめします。
+Intel Macかubuntuでの利用をおすすめします。
 
 ```bash
 sudo apt install -y libleveldb-dev
@@ -64,6 +64,101 @@ gem install bitcoinrb
 ```bash
 irb
 ```
+
+## bitcoinrb を使ったバイナリデータの処理
+
+### OpenSSL::BNクラス (bitcoinrbに含まれています）
+
+OpenSSL内で利用される暗号学的に利用される多倍長整数クラスです。
+通常の通常多倍長整数の計算ではInteger クラスを使えばよいです。
+
+ハッシュ値などのデータはOpenSSL::BNクラスのオブジェクトになります。
+
+```ruby
+require 'bitcoin'
+
+# 2の18乗の10進数表現
+2**18
+=> 262144
+
+# 16進数に変換
+(2**18).to_s(16)
+=> "40000"
+
+# 整数を OpenSSL::BNクラスのオブジェクトに変換
+(2**18).to_bn
+=> #<OpenSSL::BN 262144>
+
+# OpenSSL::BNクラスのオブジェクトを ビッグエンディアンの符号無し整数のバイナリ列に変換
+(2**18).to_bn.to_s(2)
+=> "\x04\x00\x00"
+
+# さらにバイトオーダーを反転（リトルエンディアンにする）
+(2**18).to_bn.to_s(2).reverse
+=> "\x00\x00\x04"
+```
+
+### 16進数文字列と文字列や整数の pack unpack
+
+* packメソッドは配列クラスのメソッドで，テンプレート文字列にしたがってバイナリ表現を文字列に変換する
+* unpack メソットは文字列クラスのメソッドで，テンプレート文字列に従ってアンパックした配列に変換する
+* テンプレート文字列の '*' は任意の長さの文字列パターンを意味する
+
+```ruby
+# 16進数の配列を（上位ニブル（4ビットのこと）が先）の16進数表現に変換(テンプレート文字列 H)
+ ["000004"].pack("H*")
+=> "\x00\x00\x04"
+
+# 16進数文字列を16進数に変換する（上位ニブル（4ビットのこと）が先）(テンプレート文字列 H)
+"\x00\x00\x04".unpack("H*")
+=> ["000004"]
+```
+
+```ruby
+# 10進数の整数を多倍長整数にして16進数リトルエンディアン表現にする
+1440.to_bn.to_s(2).reverse.unpack("H*")[0]
+=> "a005"
+```
+
+```ruby
+# 8ビット符号なし整数に変換　(テンプレート文字列 C)
+[1, 255].pack("C*") 
+=> "\x01\xFF"
+
+# 8ビット符号なし整数に変換　(テンプレート文字列 C)
+"\x01\xFE".unpack("C*")
+=> [1, 254]
+```
+
+### 便利な bitcoinrb のメソッド
+
+* bth　メソッド
+
+bitcoinrb では Stringクラスに16進数文字列で表現されたバイナリ表現から16進数に変換するメソッドが追加されています。
+
+```ruby
+# 16進数文字列で表現されたバイナリ表現
+Bitcoin::sha256("hello")
+=> ",\xF2M\xBA_\xB0\xA3\x0E&\xE8;*\xC5\xB9\xE2\x9E\e\x16\x1E\\\x1F\xA7B^s\x043b\x93\x8B\x98$"
+
+ # bthメソッドで16進数に変換
+ Bitcoin::sha256("hello").bth
+=> "2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824"
+
+# 整数をリトルエンディアンの16進数に変換する
+1440.to_bn.to_s(2).reverse.bth
+=> "a005"
+```
+
+* htbメソッド
+
+bitcoinrb では Stringクラスに16進数から16進数文字列で表現されたバイナリ表現に変換するメソッドが追加されています。
+
+```ruby
+ "2cf24dba5fb0a30e26e83b2ac5b9e29e1b161e5c1fa7425e73043362938b9824".htb
+=> ",\xF2M\xBA_\xB0\xA3\x0E&\xE8;*\xC5\xB9\xE2\x9E\e\x16\x1E\\\x1F\xA7B^s\x043b\x93\x8B\x98$"
+```
+
 
 ## bitcoin core RPC API の利用
 
@@ -351,37 +446,40 @@ script.run
 
 #### スクリプトユーティリティ
 
-P2PKHスクリプトの生成
+* P2PKHスクリプトの生成
 
 ```ruby
 # 公開鍵ハッシュ
 script = Bitcoin::Script.to_p2pkh('46c2fbfbecc99a63148fa076de58cf29b0bcf0b0')
 ```
 
-P2WPKH
+* P2WPKH
 
 ```ruby
 # 公開鍵ハッシュ
 script = Bitcoin::Script.to_p2wpkh('46c2fbfbecc99a63148fa076de58cf29b0bcf0b0')
 ```
 
-P2SH
+* P2SH
 
 ```ruby
+# redeem_script
 p2sh = script.to_p2sh
 ```
 
-P2WSHマルチシグ
+* P2WSHマルチシグ
 
 ```ruby
+#　閾値 m　と　公開鍵の配列
 k1 = '021525ca2c0cbd42de7e4f5793c79887fbc8b136b5fe98b279581ef6959307f9e9'
 k2 = '032ad705d98318241852ba9394a90e85f6afc8f7b5f445675040318a9d9ea29e35'
 script = Bitcoin::Script.to_p2sh_multisig_script(1, [k1, k2])
 ```
 
-P2WSH
+* P2WSH
 
 ```ruby
+# redeem_script
 script = Bitcoin::Script.to_p2wsh(<redeem script>)
 ```
 
@@ -537,7 +635,7 @@ end
     # 引数は，送金先アドレス，送金金額，手数料
 
 
-amount = 0.01
+amount = 0.001
 alice=bitcoinRPC('getnewaddress', [])
     # 送金の実行。実行結果はトランザクションID
 txid = send_bitcoin(alice, amount)
