--- a/bitcoin/4.bitcoin-SegWit.md
+++ b/bitcoin/4.bitcoin-SegWit.md
@@ -1,9 +1,10 @@
 # 4. SegWit (Segregated Witness)
 
+
+2022/05/17更新 Shigeichiro Yamasaki
+
 SegWitトランザクションの内容の復習です。
 bitcoinrb での操作を確認しておきましょう。
-
-2022/05/09更新 Shigeichiro Yamasaki
 
 
 ## トランザクションの構造と署名対象
@@ -77,9 +78,10 @@ bitcoinrb での操作を確認しておきましょう。
 
 ## address
 
+```ruby
 addrAlice="tb1qm5gqhe7e46jhyy2ca00x66slmrlljwa3m476sr"
 addrBob="tb1qm5gqhe7e46jhyy2ca00x66slmrlljwa3m476sr"
-
+```
 
 ## AliceとBobの鍵
 
