--- a/ethereum/1. ethereum-Ropsten.md
+++ b/ethereum/1. ethereum-Ropsten.md
@@ -1,18 +1,30 @@
-# Ethereum Ropsten ノード　構築
+# 1. Ethereum Ropstenノード構築
 
-2022/05/16 更新 Shigeichiro Yamasaki
+2022/05/18 更新 Shigeichiro Yamasaki
 
 
-## Ethrerumテストネットワークの種類
+## Ethereum ノードの基本構成
+
+* P2Pネットワーク　（Ethereumメインネット、Ethereumテストネット)
+* node (Ethreumクライアント）
+    * EVM (「スマートコントラクト」と呼ばれるプログラムのバイトコード処理系でEthereumネットワーク全体で同期した（シングルトン）状態マシンとなる）
+    * データベース（システムの状態をマークルパトリシアツリーとしてデータ構造で管理）
+    * 実装（Geth, Parityなど）
+* ワレット、DAppブラウザ　（MetaMaskなど）
+    * Ethereumネットワークへの操作を行うソフト
+
+
+#### Ethrerumテストネットワークの種類
 
 * Ropsten: Proof-of-work test network
 * Rinkeby: Proof-of-authority test network
 * Görli: Proof-of-authority test network
 
-## ethereum (geth) インストール手順 ubuntu 20.04 LTS
+## ethereum (Geth) インストール手順
+
+### ubuntu 20.04 LTS
 
 ubuntu 22.04 LTSでのインストールは 2022年５月現在おすすめしません
-
 
 ```bash
 sudo add-apt-repository -y ppa:ethereum/ethereum
@@ -20,9 +32,9 @@ sudo apt-get update
 sudo apt-get install ethereum
 ```
 
-## ethereum (geth) インストール手順 MacOSX
+### MacOSX
 
-HOmebrew がインストールされている前提です
+Homebrew がインストールされている前提です
 
 [Homebrew インストール](https://brew.sh/index_ja)
 
@@ -32,21 +44,16 @@ brew tap ethereum/ethereum
 brew install ethereum
 ```
 
-shellを zsh からbashに切り替える
-（Macではデフォルトでzsh)
-
-```
-bash
-```
-
-## Ethereumネットワークの同期モード
+### Ethereumネットワークの同期モード
 
 * Full: ブロックチェーンの全ブロックをダウンロードし、全てのブロックでの状態更新を確認して同期する
 * Snap: (Default): ブロックチェーンの全ブロックをダウンロードし、最近ブロックでの状態更新を確認して同期する
 * Light: 最近のブロックヘッダーのみダウンロードし、オンデマンドで必要なデータをダウンロードする
 
-## Ropstenネットワークへの接続(高速モード 'snap' で同期）
+#### Ropstenネットワークへの接続(高速モード 'snap' で同期）
 
+Mac OSX の場合は、shellを zsh からbashに切り替える
+（Macのデフォルト shell はzshではうまくうごきません)
 
 ```bash
 cd ~
@@ -54,7 +61,7 @@ mkdir Ethereum
 cd Ethereum
 mkdir ropsten
 
-geth --ropsten --syncmode "snap" --datadir "./ropsten" --http --http.addr "localhost" --http.port "8545" --http.api "eth,net,web3,admin,miner,txpool,personal" --allow-insecure-unlock -- console 2>> ./ropsten/geth_err.log
+geth --ropsten --syncmode "snap" --datadir "./ropsten" --http --http.addr "localhost" --http.port "8545" --http.api "eth,net,web3,admin,miner,txpool,personal" --allow-insecure-unlock -- console 2>> ./ropsten/Geth_err.log
 ```
 
 しばらくして以下のプロンプトが現れると成功
@@ -64,7 +71,11 @@ To exit, press ctrl-d or type exit
 > 
 ```
 
-## geth 基本操作
+## Geth コンソールによる操作
+
+Gethコンソールでは、JavaScript処理系による Ethereumワレット機能がコマンドベースで利用できます。
+
+Gethコンソール・コマンドは、以下のようなカテゴリに分類されています
 
 * eth：ブロックチェーンの操作
 * net：p2pネットワークステータス
@@ -99,7 +110,8 @@ To exit, press ctrl-d or type exit
 * admin.nodeInfo : ノードの情報
 * admin.peers : 接続されているノード情報
 
-## Gethの操作
+## Gethのコンソールによる操作の例
+
 
 #### ノード情報
 
