--- a/ethereum/2. ethereum-Solidity.md
+++ b/ethereum/2. ethereum-Solidity.md
@@ -9,6 +9,7 @@ Solidity 言語処理系のインストール方法
 ### mac へのsolidity処理系のインストール
 
 ```bash
+brew tap ethereum/ethereum
 brew install solidity
 brew link --overwrite solidity
 ```
@@ -16,6 +17,8 @@ brew link --overwrite solidity
 ### ubuntu へのsolidity処理系のインストール
 
 ```bash
+sudo add-apt-repository ppa:ethereum/ethereum
+sudo apt-get update
 sudo apt install solc
 ```
 
