--- a/ethereum/4. ethereum-ERC20.md
+++ b/ethereum/4. ethereum-ERC20.md
@@ -1,6 +1,6 @@
 # Ethereum ERC20トークンの作成
 
-2022/02/17 Shigeichiro Yamasaki
+2022/05/18更新 Shigeichiro Yamasaki
 
 Truffle からOpenZeppelin のライブラリを利用してERC20トークンを作成する
 ethere
