--- a/ethereum/6. ethereum-Truffle .md
+++ b/ethereum/6. ethereum-Truffle .md
@@ -1,7 +1,10 @@
-# Truffle （トリュフ）を使ったSolidity スマートコントラクト開発
+# 3. Truffle （トリュフ）を使ったSolidity スマートコントラクト開発
 
+2022/05/18更新　Shigeichiro Yamasaki
 
-スマートコントラクトのテスト駆動開発とデプロイ
+Solidity フレームワークのTruffleを利用したスマートコントラクト開発
+
+Solidityのテスト駆動開発とデプロイ
 
 ## 参考書籍
 
@@ -20,7 +23,7 @@ Node v16.13.2
 Web3.js v1.5.3
 Ganache
 
-## インストール
+## Truffleインストール
 
 ### nvm (ubuntu)のインストール
 
