--- a/ethereum/2. ethereum-Solidity.md
+++ b/ethereum/2. ethereum-Solidity.md
@@ -90,7 +90,7 @@ bytes32 name;
 
 #### Ether通貨単位
 
-基本単位は wei = 10^(-18) ether
+基本単位は $wei = 10^{-18}$ ether
 
 ```
 require(withdraw_amount <= 100000000000000000);
