--- a/ethereum/5. ethereum-ERC721.md
+++ b/ethereum/5. ethereum-ERC721.md
@@ -1,8 +1,9 @@
 # Ethereum ERC721トークンの作成
 
-2022/02/17 Shigeichiro Yamasaki
+2022/07/04 修正Shigeichiro Yamasaki
 
 
+## ERC-721の発行
 
 [Openzeppelinの Contract Wizard](https://docs.openzeppelin.com/contracts/4.x/wizard) を利用
 
