--- a/ethereum/4. ethereum-ERC20.md
+++ b/ethereum/4. ethereum-ERC20.md
@@ -9,7 +9,7 @@ OpenZeppelin のライブラリを利用してERC20トークンを作成する
 
 `nano MyToken.sol`
 
-```json
+```javascript
 pragma solidity ^0.8.0;
 
 interface IERC20 {
