--- a/ethereum/3. ethereum-remix.md
+++ b/ethereum/3. ethereum-remix.md
@@ -32,7 +32,7 @@ MetaMaskはChromeの拡張機能として作られている Ethereumワレット
 
 ## Remix IDE
 
-[Remix IDE](http://remix.ethereum.org/#optimize=false&runs=200&evmVersion=null&version=soljson-v0.8.7+commit.e28d00a7.js)
+[Remix IDE](http://remix.ethereum.org/#optimize=false&runs=200&evmVersion=null&version=soljavascript-v0.8.7+commit.e28d00a7.js)
 
 ![](https://assets.st-note.com/img/1658749531705-UchUMgCNUp.png)
 
@@ -59,7 +59,7 @@ MetaMaskはChromeの拡張機能として作られている Ethereumワレット
 
 ここでは、[https://gist.github.com/PraneshASP/2e18a11d8ee79ae0baa8429fe4ecda49](https://gist.github.com/PraneshASP/2e18a11d8ee79ae0baa8429fe4ecda49)　のBEP20トークンのスマートコントラクトプログラムを利用します。
 
-```json
+```javascript
 // SPDX-License-Identifier: UNLISCENSED
 
 pragma solidity 0.8.4;
