アトミックスワップ

--- a/bitcoin/7.bitcoin-HTLC.md
+++ b/bitcoin/7.bitcoin-HTLC.md
@@ -1,6 +1,6 @@
 # 7. HTLCの作成
 
-2022/06/29更新　Shigeichiro Yamasaki
+2022/08/04 更新　Shigeichiro Yamasaki
 
 ## Alice からBobに送金する
 
@@ -59,27 +59,37 @@ OP_CHECKSIG
 
 ### AliceとBobのアドレスを生成する
 
-AliceとBobは異なるワレットで操作するとよいでしょう
+AliceとBobは異なるワレットやノードで操作するとよいでしょう
 
-bitcoin-core.cli getnewaddress Alice
-
-=>
-tb1q92v4dxsz47zxs5rdu42q7nl4xsdlncmvswxr5f
-
-bitcoin-core.cli getnewaddress Bob
-=>
-tb1q9vml26m9vgm5nk3fk9v7cfkad7tlfgsgnahkfu
-
-### AliceとBobの秘密鍵
+#### Alice
 
 ```
-bitcoin-core.cli dumpprivkey tb1q92v4dxsz47zxs5rdu42q7nl4xsdlncmvswxr5f
-cVkvmDQ2TvRg1L1eLCfoAhYZpWAiaJyesyF2owMA9kUJj6mczJQP
+# テスト用の秘密鍵（WIF形式）
+priv_alice = "cTzEHTNYQQ2PGLJWFkXdpxHm3B8kuU7yN3c5b5ZkSWzUY6j3ZW5B"
+
+# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
+keyAlice = Bitcoin::Key.from_wif(priv_alice)
+
+# アドレス
+alice = keyAlice.to_p2wpkh
+
+# 公開鍵
+pub_alice = keyAlice.pubkey
 ```
 
+#### Bob
+
 ```
-bitcoin-core.cli dumpprivkey tb1q9vml26m9vgm5nk3fk9v7cfkad7tlfgsgnahkfu
-cUpy2Z19AC22MnGLNBfrNMZqrbz7v7rtL9UByzMoxqGC4v9SKtFf
+# テスト用の秘密鍵（WIF形式）
+priv_bob   = "cUTymPpf51Y1Q8hddD93kSqVahkdFQJXWCuMgY8ctHJqbermrXPK"
+# 鍵オブジェクトの復元(WIF形式の秘密鍵から生成）
+keyBob   = Bitcoin::Key.from_wif(priv_bob)
+
+# アドレス
+bob   = keyBob.to_p2wpkh
+
+# 公開鍵
+pub_bob   = keyBob.pubkey
 ```
 
 ### AliceのUTXOの確認
@@ -124,17 +134,29 @@ def bitcoinRPC(method, params)
     JSON.parse(http.request(request).body)["result"]
 end
 
-# AliceとBobのアドレス
-addrAlice="tb1q92v4dxsz47zxs5rdu42q7nl4xsdlncmvswxr5f"
-addrBob="tb1q9vml26m9vgm5nk3fk9v7cfkad7tlfgsgnahkfu"
 
 # 秘密鍵（WIF形式）
 privAlice='cVkvmDQ2TvRg1L1eLCfoAhYZpWAiaJyesyF2owMA9kUJj6mczJQP'
+# 本来はAliceはBobの秘密鍵は知りません
 privBob='cUpy2Z19AC22MnGLNBfrNMZqrbz7v7rtL9UByzMoxqGC4v9SKtFf'
 
 # 鍵オブジェクト(WIF形式の秘密鍵から生成）
 keyAlice=Bitcoin::Key.from_wif(privAlice)
+# 作業の効率化のためにBobの秘密鍵を
 keyBob=Bitcoin::Key.from_wif(privBob)
+
+# AliceとBobのアドレス
+addrAlice = keyAlice.to_p2wpkh
+addrBob = keyBob.to_p2wpkh
+
+# Aliceに送金しておく (0.0002)のUTXOを4個
+bitcoinRPC('sendtoaddress',[addrAlice, 0.0002])
+bitcoinRPC('sendtoaddress',[addrAlice, 0.0002])
+bitcoinRPC('sendtoaddress',[addrAlice, 0.0002])
+bitcoinRPC('sendtoaddress',[addrAlice, 0.0002])
+
+# 10分後（マイニングされるのを待つ）
+sleep(10*60)
 
 # AliceのUTXOと残高を確認（とりあえず最初の Alice宛のUTXOを利用することにする）
 utxos=bitcoinRPC('listunspent',[]).select{|x| x["address"]==addrAlice}
@@ -246,15 +268,15 @@ secret_hash
 
 ### HTLCロック・トランザクションの資金の確認
 
-output (デポジット金額：0.01,手数料 0.0002)
+output (デポジット金額：0.0001,手数料 0.00002)
 
 ```ruby
 # 使用するUTXOの金額
 utxoAmount
 # HTLCでデポジットする金額
-deposit =0.01
+deposit =0.0001
 # 手数料
-fee=0.0002
+fee=0.00002
 # お釣り
 change= utxoAmount-deposit-fee
 
@@ -361,6 +383,142 @@ htcl_lockTx_txid
 => "521682bd3a3a485c7825d0652bac0b9c9faec5695f0c969b9c4e8ecfc8597270"
 ```
 
+## Alice によるHTLCロックトランザクション作成処理のまとめ
+
+#### 秘密情報はCarolが生成する
+
+Carolの処理
+
+```ruby
+secret='HTLC_test'
+secret_hash_Carol=Bitcoin.sha256(secret)
+```
+
+Bobの処理
+
+```ruby
+pubkeyBob_Bob = keyBob.pubkey
+```
+
+* Aliceは、Carolが生成したsecret_hashを得る
+* Aliceは、Bobの公開鍵を得る
+
+Aliceの処理をメソッドにまとめる
+
+```ruby
+# Carolが生成した secret_hash (Carolからもらう)
+secret_hash = secret_hash_Carol
+# Bobの公開鍵（Bobからもらう）
+pubkeyBob = pubkeyBob_Bob
+# HTLCでデポジットする金額
+deposit =0.0001
+# 手数料
+fee=0.00002
+# ロックする日数
+lockDays = 10
+# Aliceの鍵オブジェクト
+    # 秘密鍵（WIF形式）
+    privAlice='cVkvmDQ2TvRg1L1eLCfoAhYZpWAiaJyesyF2owMA9kUJj6mczJQP'
+    # 鍵オブジェクト(WIF形式の秘密鍵から生成）
+keyAlice=Bitcoin::Key.from_wif(privAlice)
+
+# HTLC Lock トランザクションの生成
+#-------------------------------------------------
+def create_HTCL_lock_transaction(keyAlice, secret_hash, pubkeyBob, deposit, fee, lockDays)
+    balance = bitcoinRPC('getbalance',[])
+    utxos=bitcoinRPC('listunspent',[]).select{|x| x["address"]==keyAlice.to_p2wpkh}
+    unless (deposit > balance) or (utxos == []) then
+        # AliceのUTXOと残高を確認（とりあえず最初の Aliceのアドレス宛のUTXOを利用することにする）
+        utxoAmount = utxos[0]["amount"]
+        utxoVout = utxos[0]["vout"]
+        utxoTxid = utxos[0]["txid"]
+        utxoScriptPubKey = utxos[0]["scriptPubKey"]
+
+        # <ロックするブロック数> 10日間のブロック数（リトルエンディアン）
+        locktime = (6*24*lockDays).to_bn.to_s(2).reverse.bth
+        # redeem script
+        redeem_script = Bitcoin::Script.new << OP_IF << OP_SHA256 << secret_hash << OP_EQUALVERIFY << pubkeyBob.htb << OP_ELSE << locktime << OP_CSV << OP_DROP << keyAlice.pubkey.htb << OP_ENDIF << OP_CHECKSIG
+        # HTLCロックトランザクションの scriptPubKey
+        scriptPubKey_p2wsh = Bitcoin::Script.from_string("0 #{redeem_script.to_sha256}")
+        # P2WSH アドレスの生成
+        p2wshaddr = scriptPubKey_p2wsh.to_addr
+        # 使用するUTXOの金額
+        utxoAmount
+        # お釣り
+        change= utxoAmount-deposit-fee
+        # それぞれの金額をSatoshiに変換
+        utxoAmount_satoshi = (utxoAmount * (10**8)).to_i
+        deposit_satoshi = (deposit *  (10**8)).to_i
+        change_satoshi = (change *  (10**8)).to_i
+        # トランザクションテンプレートの生成
+        tx = Bitcoin::Tx.new
+        # inputの作成
+        tx.in << Bitcoin::TxIn.new(out_point: Bitcoin::OutPoint.from_txid(utxoTxid, utxoVout))
+        # デポジット用　P2WSH outputの作成
+        tx.out << Bitcoin::TxOut.new(value: deposit_satoshi, script_pubkey:  Bitcoin::Script.parse_from_addr(p2wshaddr))
+        # おつり用のP2WPKH outputの作成
+        tx.out << Bitcoin::TxOut.new(value: change_satoshi , script_pubkey:  Bitcoin::Script.parse_from_addr(keyAlice.to_p2wpkh))
+        # UTXOのロックを解除するために、UTXOのScript Public key を取得
+        utxo_scriptPubKey = Bitcoin::Script.parse_from_payload(utxoScriptPubKey.htb)
+        # sighashを作成
+        sighash = tx.sighash_for_input(0, utxo_scriptPubKey, sig_version: :witness_v0, amount: utxoAmount_satoshi)
+        # Aliceの秘密鍵でHTLCロックトランザクションの署名を作成する
+        signature = keyAlice.sign(sighash) + [Bitcoin::SIGHASH_TYPE[:all]].pack('C')
+        # witness 領域にAliceのsighash へ署名をプッシュする
+        tx.in[0].script_witness.stack << signature
+        # witness 領域にAliceの公開鍵（バイナリ形式）をプッシュする
+        tx.in[0].script_witness.stack <<  keyAlice.pubkey.htb
+        # Aliceによる、完成したHTLCロックトランザクションのブロードキャスト
+        return tx
+    else
+        puts "you don't have enough deposit funds"
+    end
+end
+```
+
+#### 実行
+
+```ruby
+# HTLC ロックトランザクションの生成
+htcl_lockTx  = create_HTCL_lock_transaction(keyAlice, secret_hash, pubkeyBob, 0.0001, 0.00002, 10)
+
+=> 
+[#<Bitcoin::Tx:0x00007f1a50ec2298
+...
+irb(main):320:0> htcl_lockTx
+=> 
+#<Bitcoin::Tx:0x00007f1a50ec2298 
+ @inputs=
+  [#<Bitcoin::TxIn:0x00007f1a50ec20e0
+    @out_point=#<Bitcoin::OutPoint:0x00007f1a50ec2130 @index=1, @tx_hash="ac992c635a54898e8b8e40eaf63229c112db5605609cbf19ac332d77b3995ed2">,
+    @script_sig=#<Bitcoin::Script:0x00007f1a50ec20b8 @chunks=[]>,
+    @script_witness=
+     #<Bitcoin::ScriptWitness:0x00007f1a50ec2068
+      @stack=
+       ["0D\x02 +\xDBB\xD5\xAD\x96\xC1\xCE\xFC\xBE\x0Fa\xA4\xCDq}?\x1A\xAB\xA8\f\rx\xE4\xA6\xB7{\xAA\xD2\xED#\xDC\x02 B/\xFC\xB1\x9A\x03>G\xB9\xB9\xAD\xF8\xE9\xCD\xE9\xD4\xEF4\xD7\x9B\xB8[\xDD\xAFH\v9q\xD9\xFC\xCD\x15\x01",
+        "\x02\xF5\x1A\xEA\x05\x86$\x8F\x95(\xB9m\x13\xFD\x15]\x06\xC3\x94\xFBm\xC5\xD7\x90V\x857\xBEh\xC7^\xAF\xF7"]>,
+    @sequence=4294967295>],
+ @lock_time=0,
+ @outputs=
+  [#<Bitcoin::TxOut:0x00007f1a50ec6a78
+    @script_pubkey=
+     #<Bitcoin::Script:0x00007f1a50ec6ca8 @chunks=["\x00", " \x1F`qq\xE9\xD9\x90V\xCA\fWJ\xE2X\xCCH\xE3\x97\x06a0\xD8DuM)T\xAF\xA6`=\x9C"]>,
+    @value=10000>,
+   #<Bitcoin::TxOut:0x00007f1a50ecbc80
+    @script_pubkey=#<Bitcoin::Script:0x00007f1a50ecbfa0 @chunks=["\x00", "\x14*\x99V\x9A\x02\xAF\x84hPm\xE5T\x0FO\xF54\e\xF9\xE3l"]>,
+    @value=75998>],
+ @version=1>
+
+
+# TLCロックトランザクションのブロードキャスト
+htcl_lockTx_txid = bitcoinRPC('sendrawtransaction',[htcl_lockTx.to_hex])
+
+# HTLCロックトランザクションのトランザクションID（Bobにわたす）
+htcl_lockTx_txid 
+=>
+"4637e606ac804383cf15a72dcad26347372c52b5fa2a4284ecede429088c00a7"
+
+```
 ---
 
 ## Bob によるHTCLアンロックトランザクションの作成
@@ -395,11 +553,9 @@ addrAlice="tb1q92v4dxsz47zxs5rdu42q7nl4xsdlncmvswxr5f"
 addrBob="tb1q9vml26m9vgm5nk3fk9v7cfkad7tlfgsgnahkfu"
 
 # 秘密鍵（WIF形式）
-privAlice='cVkvmDQ2TvRg1L1eLCfoAhYZpWAiaJyesyF2owMA9kUJj6mczJQP'
 privBob='cUpy2Z19AC22MnGLNBfrNMZqrbz7v7rtL9UByzMoxqGC4v9SKtFf'
 
 # 鍵オブジェクト(WIF形式の秘密鍵から生成）
-keyAlice=Bitcoin::Key.from_wif(privAlice)
 keyBob=Bitcoin::Key.from_wif(privBob)
 ```
 
@@ -436,9 +592,9 @@ p2wshaddr = scriptPubKey_p2wsh.to_addr
 # アンロックの対象となるUTXO のvout
 htcl_lockTx_vout=0
 # アンロックの対象となるUTXO へのデポジット金額
-deposit=0.01
+deposit=0.0001
 # 手数料
-fee=0.0002
+fee=0.00002
 # 報酬金額
 reward = deposit-fee
 # satoshi 変換
