--- a/bitcoin/8.atomic-swap.md
+++ b/bitcoin/8.atomic-swap.md
@@ -10,7 +10,8 @@
 
 ![](./img/htlc1.png)
 
-Alice, Bob, Carol は別マシンで実行することが望ましい。
+Alice, Bob　は別マシンで実行することが望ましい。
+Carolは必要ありません。
 同じマシンでも別ターミナルで実施する
 
 #### HTLCでBob からAliceへも送金しようとする
@@ -127,9 +128,8 @@ bitcoinRPC('sendtoaddress',[addrBob, 0.0004])
 ```
 
 
-## Carolの準備
+## 秘密情報の準備（Bobが行います）
 
-別マシン（ターミナル）で
 
 ```ruby
 require 'bitcoin'
