tapyrus-bitcoin atmic swap

--- a/bitcoin/8.atomic-swap.md
+++ b/bitcoin/8.atomic-swap.md
@@ -134,7 +134,9 @@ bitcoinRPC('sendtoaddress',[addrBob, 0.0004])
 ```ruby
 require 'bitcoin'
 
+# 秘密情報
 secret='HTLC_test'
+# 秘密情報のハッシュ値
 secret_hash=Bitcoin.sha256(secret).bth
 => 
 "996bf59473947d9906275f427ecb318371514db2...
