bitcoin tapyrus atmic swap

--- a/bitcoin/8.atomic-swap.md
+++ b/bitcoin/8.atomic-swap.md
@@ -10,8 +10,7 @@
 
 ![](./img/htlc1.png)
 
-Alice, Bob　は別マシンで実行することが望ましい。
-Carolは必要ありません。
+Alice, Bob, Carol は別マシンで実行することが望ましい。
 同じマシンでも別ターミナルで実施する
 
 #### HTLCでBob からAliceへも送金しようとする
@@ -128,15 +127,14 @@ bitcoinRPC('sendtoaddress',[addrBob, 0.0004])
 ```
 
 
-## 秘密情報の準備（Bobが行います）
+## Carolの準備
 
+別マシン（ターミナル）で
 
 ```ruby
 require 'bitcoin'
 
-# 秘密情報
 secret='HTLC_test'
-# 秘密情報のハッシュ値
 secret_hash=Bitcoin.sha256(secret).bth
 => 
 "996bf59473947d9906275f427ecb318371514db2...
@@ -225,7 +223,7 @@ redeem_script_asm = redeem_script.to_h[:asm]
 "OP_IF OP_SHA256 996bf59473947d9906275f427ecb318371514db2ffb8e9d8517b5e45cb65e357 OP_EQUALVERIFY 037344b60d92625fb2b1f903c959eae0c5ac07a98f4f5d89c00fb2cfafe36d51d3 OP_ELSE 1440 OP_CSV OP_DROP 021cbe42a46b34eded4242666648275f866c836257888607d611bce7eb85b15238 OP_ENDIF OP_CHECKSIG"
 ```
 
-## AliceによるHTLC ロックトランザクションのブロードキャスト
+## AliceによるHTLC Lock トランザクションのブロードキャスト
 
 HTLCロックトランザクションのトランザクションIDをBobにわたす必要があります
 
@@ -238,10 +236,7 @@ htcl_lockTx_txid
 "1501924bac50fc8f66367179f4f669921e9e2eb273b0a642b43c7e9fc026fe7a"
 ```
 
-## BobによるHTLC　ロックトランザクションの作成とブロードキャスト
-
-Aliceと同様に行います。
-
+## BobによるHTLC
 ## Bob によるHTCLアンロックトランザクションの作成メソッド
 
 * Carolから、秘密情報をもらう
@@ -376,5 +371,4 @@ find_secret("4df0f17d418c1e913369e5cdf83c6f047a4156274a2336ffc282837187a30fd2")
 
 ## AliceもHTLCアンロックトランザクションを作成する
 
-Bobと同様に行います。
-
+Bobと同様
