double chain wallet

--- a/bitcoin/0.bitcoin-core-signet.md
+++ b/bitcoin/0.bitcoin-core-signet.md
@@ -1,6 +1,6 @@
 # 0. Bitcoin core Signet ノードの構築
 
-2022/05/05更新 Shigeichiro Yamasaki
+2022/08/08 更新 Shigeichiro Yamasaki
 
 ## install 方法
 
@@ -26,7 +26,7 @@ bitcon coreは「危険なアプリ」という扱いになっています。
 
 --
 
-### ubuntu 20.04LTS/ ubuntu 22.04/LTSの場合
+### ubuntu 20.04LTS/の場合
 
 #### snap でインストールする
 
@@ -93,7 +93,7 @@ rpcuser=hoge
 rpcpassword=hoge
 rpcport=38332
 port=38333
-fallbackfee=0.0002
+fallbackfee=0.00002
 ```
 
 * 「OK」をクリック
@@ -114,6 +114,18 @@ bitcoin-core.cli stop
 アイコンが薄い黄緑になっていれば成功
 
 * bitcoin-qt で自分のワレットの作成しておく
+
+### bitcoin-core.cli でのワレット生成の注意
+
+アカウントの秘密鍵が必要な場合、createwallet のデフォルトの設定では不可能な状態になってしまいます。
+
+秘密鍵を取り出し可能なワレットの生成
+
+### レガシーワレットの作成
+
+```bash
+bitcoin-core.cli -named createwallet wallet_name=＜ワレット名＞ descriptors=false
+```
 
 ## テスト用コインの入手
 
