--- a/bitcoin/7.bitcoin-HTLC.md
+++ b/bitcoin/7.bitcoin-HTLC.md
@@ -287,6 +287,13 @@ end
 tx = htlc_unlock_tx(htlc_lock_txid, secret, redeem_script_htlc, addrBob, keyBob, 0.00002)
 ```
 
+### unlocking script の確認
+
+```ruby
+tx.inputs[0].script_sig.run
+=> true
+```
+
 ## HTLC アンロックトランザクションのブロードキャスト
 
 ```ruby
