--- a/es/es01.md
+++ b/es/es01.md
@@ -154,23 +154,62 @@ map(chr,range(32,126))
 
 さらに、CPUの違いやOSの違いを超えた標準的なエンコード方法（BER, DER, CER など）で暗号文の交換が行われます。
 
+pythonではBASE64エンコーディングにします．
+
+python版 (python3.3以降）
+
 ```python
 # BASE64 エンコーディングを利用
 import base64
+import random
 
 m = "これは平文の message です"
->>> code = base64.b64encode(m.encode())
->>> code
-b'44GT44KM44Gv5bmz5paH44GuIG1lc3NhZ2Ug44Gn44GZ'
 
->>> base64.b64decode(code).decode()
-'これは平文の message です'
+# 数値にエンコード
+def encode(m):
+    code = base64.b64encode(m.encode())
+    return (int.from_bytes(code,'little'),len(code))
 
->>> l=len(code)
+>>> num,l =encode(m)
+>>> num
+3235199842280327765224261484107541982483167718442127528151054142879834361564138973780045833349466209858612
 >>> l
 44
 
+# メッセージと同じサイズのランダム文字列の生成
+def genkey(m):
+    num,l = encode(m)
+    return random.randrange(num)
 
+# 暗号鍵の生成
+>>> key = genkey(num)
+>>> key
+857448620764902181144852004166265761725484473188686380327057048957583363966721733655412153354448233643925
+
+# バーナム暗号で暗号化
+def encVernam(m,key):
+    num,l = encode(m)
+    c = num^key
+    return (c,l)
+
+>>> c,l = encVernam(m,key)
+>>> c
+2783215597427399970703161896636114738130816019464348836032989883331049845309145160115339996368901547363233
+>>> l
+44
+
+# 数値を文字列にデコード
+def decode(num,l):
+    bytes = num.to_bytes(l,'little')
+    return base64.b64decode(bytes).decode()
+    
+# バーナム暗号で復号化
+def decVernam(c,l,key):
+    num = c^key
+    return decode(num,l)
+
+>>> decVernam(c,l,key)
+'これは平文の message です'
 
 ```
 
@@ -232,3 +271,83 @@ ber = encrypt(m,key)
 decrypt(ber,key)
 => "これは平文の message です"
 ```
+
+
+## ユークリッドの互除法
+
+```python
+def gcd(a,b):
+    if a%b==0:
+        return b
+    else:
+        return gcd(b,a%b)
+
+```
+
+```python
+def gcd(a,b):
+    if a%b==0:
+        print('gcd({},{})={}'.format(a,b,b))
+        return b
+    else:
+        print('gcd({},{})=gcd({},{})'.format(a,b,b,a%b))
+        return gcd(b,a%b)
+
+>>> gcd(462,273)
+gcd(462,273)=gcd(273,189)
+gcd(273,189)=gcd(189,84)
+gcd(189,84)=gcd(84,21)
+gcd(84,21)=21
+21
+```
+
+### 拡張ユークリッド互除法
+
+```python
+def egcd(a,b):						
+    if a%b==0:
+        return (0,1,b)                  # 再帰の基底 a*0 + b*1 = b 
+    else:
+        xp,yp,gcd = egcd(b,a%b)         # 再帰 b*xp + a%b*yp = d
+        return (yp,xp-(a//b)*yp,gcd)     # 復帰処理x=yp,y=xp-(a/b)*yp
+
+>>> egcd(462,273)
+(3, -5, 21)
+
+```
+
+print文を入れた版
+
+```python
+def egcd(a,b):						
+    if a%b==0:
+        print('(a1,b1,q1,r1,gcd,x1,y1)=({}.{},{},0,{},0,1)'.format(a,b,a//b,b))
+        return (0,1,b)                  # 再帰の基底 a*0 + b*1 = b 
+    else:
+        xp,yp,gcd = egcd(b,a%b)         # 再帰 b*xp + a%b*yp = d
+        print('(an,bn,qn,rn,gcd,xn,yn)=({}.{},{},{},{},{},{})'.format(a,b,a//b,a%b,gcd,yp,xp-(a//b)*yp))
+        return (yp,xp-(a//b)*yp,gcd)     # 復帰処理x=yp,y=xp-(a/b)*yp
+
+>>> egcd(462,273)
+(a1,b1,q1,r1,gcd,x1,y1)=(84.21,4,0,21,0,1)
+(an,bn,qn,rn,gcd,xn,yn)=(189.84,2,21,21,1,-2)
+(an,bn,qn,rn,gcd,xn,yn)=(273.189,1,84,21,-2,3)
+(an,bn,qn,rn,gcd,xn,yn)=(462.273,1,189,21,3,-5)
+(3, -5, 21)
+
+```
+
+### Zp での逆数を求めるプログラム
+
+```python
+def inv(n,p):
+    x,y,d=egcd(n,p)
+    return x%p
+    
+>>> inv(11,23)
+(a1,b1,q1,r1,gcd,x1,y1)=(11.1,11,0,1,0,1)
+(an,bn,qn,rn,gcd,xn,yn)=(23.11,2,1,1,1,-2)
+(an,bn,qn,rn,gcd,xn,yn)=(11.23,0,11,1,-2,1)
+21
+```
+
